use icons and use fixed collapsed sidebar width

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,10 @@ body {
     padding-left: 5%;
 }
 
+#collapse-button {
+    padding-right: 0;
+}
+
 #map {
     height: 100%;
 }
